--- a/models/models.config
+++ b/models/models.config
@@ -4,4 +4,9 @@ model_config_list {
     base_path: '/home/models/half_plus_two/'
     model_platform: "tensorflow"
   }
+  config {
+    name: 'half_plus_three'
+    base_path: '/home/models/half_plus_three/'
+    model_platform: "tensorflow"
+  }
 }
