--- a/deployments/service-tfcontrolled.yml
+++ b/deployments/service-tfcontrolled.yml
@@ -1,12 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tfserving-svc
+  name: tfcontrolled-svc
   labels:
-    run: tfserving-svc
+    run: tfcontrolled-svc
 spec:
   type: NodePort
   ports:
+  - port: 5000
+    targetPort: 5000
+    nodePort: 30000
+    name: tfserving-rest-actuator
   - port: 8501
     targetPort: 8501
     nodePort: 30001
@@ -16,4 +20,4 @@ spec:
     nodePort: 30002
     name: tfserving-rest-cpu-2
   selector:
-    run: tfserving
+    run: tfcontrolled
