--- a/src/components/dispatcher/config.yml
+++ b/src/components/dispatcher/config.yml
@@ -1,12 +1,14 @@
 models:
   - name: "half_plus_two"
+    version: 1
     sla: 1000
   - name: "half_plus_three"
+    version: 1
     sla: 100
 containers:
   - model: "half_plus_two"
     version: 1
-    container: "tfserving-cpu-1"
+    container: "tfserving-cpu-0"
     active: true
     device: 0
     node: "192.168.99.103"
@@ -14,15 +16,15 @@ containers:
     quota: 100000
   - model: "half_plus_three"
     version: 1
-    container: "tfserving-cpu-2"
+    container: "tfserving-cpu-1"
     active: true
     device: 0
     node: "192.168.99.103"
     port: 30002
     quota: 100000
-  - model: "half_plus_two"
+  - model: "all"
     version: 1
-    container: "tfserving-gpu-1"
+    container: "tfserving-gpu-0"
     active: true
     device: 1
     node: "192.168.99.103"
