--- a/src/deployments/deployment-tfcontrolled.yml
+++ b/src/deployments/deployment-tfcontrolled.yml
@@ -22,24 +22,33 @@ spec:
           name: docker-sock
         ports:
         - containerPort: 5000
-      - name: tfserving-cpu-1
+      - name: tfserving-cpu-0
         image: tensorflow/serving
+        env:
+        - name: NVIDIA_VISIBLE_DEVICES
+          value: "none"
         args: [ "--model_config_file=/home/models/models.config", "--rest_api_port=8501"]
         ports:
         - containerPort: 8501
         volumeMounts:
         - name: shared-models
           mountPath: /home/models
-      - name: tfserving-cpu-2
+      - name: tfserving-cpu-1
         image: tensorflow/serving
+        env:
+        - name: NVIDIA_VISIBLE_DEVICES
+          value: "none"
         args: [ "--model_config_file=/home/models/models.config", "--rest_api_port=8502"]
         ports:
         - containerPort: 8502
         volumeMounts:
         - name: shared-models
           mountPath: /home/models
-      - name: tfserving-gpu-1
+      - name: tfserving-gpu-0
         image: tensorflow/serving
+        env:
+        - name: NVIDIA_VISIBLE_DEVICES
+          value: "0"
         args: [ "--model_config_file=/home/models/models.config", "--rest_api_port=8503"]
         ports:
         - containerPort: 8503
