--- a/src/models/models.config
+++ b/src/models/models.config
@@ -9,4 +9,9 @@ model_config_list {
     base_path: '/home/models/half_plus_three/'
     model_platform: "tensorflow"
   }
+  config {
+    name: 'resnet_NHWC'
+    base_path: '/home/models/resnet_v2_fp32_savedmodel_NHWC_jpg/'
+    model_platform: "tensorflow"
+  }
 }
