--- a/src/deployments/deployment-tfcontrolled-gpu.yml
+++ b/src/deployments/deployment-tfcontrolled-gpu.yml
@@ -44,14 +44,29 @@ spec:
         volumeMounts:
         - name: shared-models
           mountPath: /home/models
-      - name: tfserving-gpu-0
+      - name: tfserving-cpu-2
         image: tensorflow/serving:latest-gpu
         env:
         - name: NVIDIA_VISIBLE_DEVICES
-          value: "0"
+          value: "none"
         args: [ "--model_config_file=/home/models/models.config", "--rest_api_port=8503"]
         ports:
         - containerPort: 8503
+        volumeMounts:
+        - name: shared-models
+          mountPath: /home/models
+      - name: tfserving-gpu-0
+        image: tensorflow/serving:latest-gpu
+        # gpus can also be requested with
+        # resources:
+          # limits:
+            # nvidia.com/gpu: 2 # requesting 2 GPUs
+        env:
+        - name: NVIDIA_VISIBLE_DEVICES
+          value: "0"
+        args: [ "--model_config_file=/home/models/models.config", "--rest_api_port=8504"]
+        ports:
+        - containerPort: 8504
         volumeMounts:
         - name: shared-models
           mountPath: /home/models
