--- a/src/deployments/deployment-tfcontrolled.yml
+++ b/src/deployments/deployment-tfcontrolled.yml
@@ -38,11 +38,19 @@ spec:
         volumeMounts:
         - name: shared-models
           mountPath: /home/models
-      - name: tfserving-gpu-0
+      - name: tfserving-cpu-2
         image: tensorflow/serving
         args: [ "--model_config_file=/home/models/models.config", "--rest_api_port=8503"]
         ports:
         - containerPort: 8503
+        volumeMounts:
+        - name: shared-models
+          mountPath: /home/models
+      - name: tfserving-gpu-0
+        image: tensorflow/serving
+        args: [ "--model_config_file=/home/models/models.config", "--rest_api_port=8504"]
+        ports:
+        - containerPort: 8504
         volumeMounts:
         - name: shared-models
           mountPath: /home/models
