--- a/deployments/deployment-tfcontrolled-gpu.yml
+++ b/deployments/deployment-tfcontrolled-gpu.yml
@@ -15,8 +15,8 @@ spec:
         run: tfcontrolled
     spec:
       containers:
-      - name: tfcontrolled-actuator
-        image: tfcontrolled-actuator:local
+      - name: tfcontrolled-actuator_controller
+        image: tfcontrolled-actuator_controller:local
         volumeMounts:
         - mountPath: /var/run
           name: docker-sock
