--- a/components/actuator/Dockerfile
+++ b/components/actuator/Dockerfile
@@ -6,10 +6,8 @@ WORKDIR /app
 
 RUN pip install -r requirements.txt
 
-ENV FLASK_APP "main.py"
 ENV FLASK_DEBUG 1
-ENV FLASK_RUN_HOST 0.0.0.0
 
 EXPOSE 5000
 
-CMD [ "flask", "run" ]
+CMD [ "python", "main.py" ]
