--- a/deployments/daemonset-tfcontrolled.yml
+++ b/deployments/daemonset-tfcontrolled.yml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: tfcontrolled-actuator_controller
+  name: tfcontrolled-actuator
   labels:
     run: tfcontrolled
 spec:
@@ -15,8 +15,8 @@ spec:
         name: tfcontrolled
     spec:
       containers:
-      - name: tfcontrolled-actuator_controller
-        image: tfcontrolled/actuator_controller
+      - name: tfcontrolled-actuator
+        image: tfcontrolled/actuator
         # command: ['docker', 'run', '-p', '80:80', 'httpd:latest']
         ports:
         - containerPort: 5000
