Added round robin policy for CPU

--- a/components/containers_manager/config.yml
+++ b/components/containers_manager/config.yml
@@ -20,7 +20,7 @@ containers:
     node: "192.168.99.105"
     port: 30001
     quota: 100000
-  - model: "half_plus_three"
+  - model: "half_plus_two"
     version: 1
     container: "tfserving-rest-cpu-1"
     active: true
@@ -28,7 +28,7 @@ containers:
     node: "192.168.99.105"
     port: 30002
     quota: 100000
-  - model: "resnet_NHWC"
+  - model: "half_plus_three"
     version: 1
     container: "tfserving-rest-cpu-2"
     active: true
@@ -36,11 +36,19 @@ containers:
     node: "192.168.99.105"
     port: 30003
     quota: 100000
+  - model: "resnet_NHWC"
+    version: 1
+    container: "tfserving-rest-cpu-3"
+    active: true
+    device: 0
+    node: "192.168.99.105"
+    port: 30004
+    quota: 100000
   - model: "all"
     version: 1
     container: "tfserving-rest-gpu-0"
     active: true
     device: 1
     node: "192.168.99.105"
-    port: 30004
+    port: 30005
     quota: 100000
