--- a/components/containers_manager/config.yml
+++ b/components/containers_manager/config.yml
@@ -2,22 +2,24 @@ models:
   - name: "half_plus_two"
     version: 1
     sla: 1
-    alpha: 1
+    alpha: 0.5
+    profiled_rt: 0.05
   - name: "half_plus_three"
     version: 1
     sla: 0.5
-    alpha: 1
+    alpha: 0.5
   - name: "resnet_NHWC"
     version: 1
     sla: 0.5
-    alpha: 1
+    alpha: 0.5
+    profiled_rt: 0.07
 containers:
   - model: "half_plus_two"
     version: 1
     container: "tfserving-rest-cpu-0"
     active: true
     device: 0
-    node: "192.168.99.105"
+    node: "192.168.99.108"
     port: 30001
     quota: 100000
   - model: "half_plus_two"
@@ -25,7 +27,7 @@ containers:
     container: "tfserving-rest-cpu-1"
     active: true
     device: 0
-    node: "192.168.99.105"
+    node: "192.168.99.108"
     port: 30002
     quota: 100000
   - model: "half_plus_three"
@@ -33,7 +35,7 @@ containers:
     container: "tfserving-rest-cpu-2"
     active: true
     device: 0
-    node: "192.168.99.105"
+    node: "192.168.99.108"
     port: 30003
     quota: 100000
   - model: "resnet_NHWC"
@@ -41,7 +43,7 @@ containers:
     container: "tfserving-rest-cpu-3"
     active: true
     device: 0
-    node: "192.168.99.105"
+    node: "192.168.99.108"
     port: 30004
     quota: 100000
   - model: "all"
@@ -49,6 +51,6 @@ containers:
     container: "tfserving-rest-gpu-0"
     active: true
     device: 1
-    node: "192.168.99.105"
+    node: "192.168.99.108"
     port: 30005
     quota: 100000
